<resources>
    <string name="app_name">בקרת מערכת השקיה V1</string>
    <string name="button_getdevicesettings">קבל נתוני השקיה</string>
    <string name="button_config_device_txt">עדכן זמני השקיה</string>
    <string name="sunday_txt"> ראשון</string>
    <string name="monday_txt"> שני</string>
    <string name="tuesday_txt"> שלישי</string>
    <string name="wednesday_txt"> רביעי</string>
    <string name="thursday_txt"> חמישי</string>
    <string name="friday_txt"> שישי</string>
    <string name="saturday_txt"> שבת</string>
    <string name="sprinkler1toggle_txt">Toggle Sprinkler 1</string>
    <string name="sprinkler2toggle_txt">Toggle Sprinkler 2</string>
    <string name="sprinkler3toggle_txt">Toggle Sprinkler 3</string>
    <string name="sprinkler_3">גינה אחורית</string>
    <string name="sprinkler_2">ממטרת דשא</string>
    <string name="sprinkler_1">גינה קדמית</string>
    <string name="togglemsg_txt">הפעלת השקיה ידנית</string>
    <string name="togglemsgmanualsprinkler1_txt">Sprinkler 1</string>
    <string name="togglemsg1_txt">Sprinkler 1</string>
    <string name="button_disable_device_txt">Disable Irrigation</string>
    <string name="txt_disable_irrigation">Irrigation disabled</string>
    <string name="txt_enable_irrigation">Irrigation enabled</string>
    <string name="txt_chkbox_enable_irrigation">איפשור מערכת השקיה</string>
    <string name="button_connect_txt">התחבר לשרת</string>
</resources>